...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_playing_referee"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
...
        android:layout_marginBottom="8dp"
        android:textColor="@color/red_FF001F"
        app:layout_constraintBottom_toTopOf="@+id/btn_gaming_game_over"
        app:layout_constraintEnd_toStartOf="@+id/text_gaming_current_foul_separation"
        app:layout_constraintHorizontal_bias="0.5"
...

        <Button
            android:id="@+id/btn_playing_team_a_player1_point_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_a_player1_rebound_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_a_player1_foul_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_a_player2_point_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_a_player2_rebound_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_a_player2_foul_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_a_player3_point_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_a_player3_rebound_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_a_player3_foul_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_b_player1_point_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_b_player1_rebound_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_b_player1_foul_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_b_player2_point_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_b_player2_rebound_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_b_player2_foul_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_b_player3_point_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_b_player3_rebound_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_b_player3_foul_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...
