...
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0ffffff"
    android:id="@+id/fragment_result_referee">

    <TextView
        android:id="@+id/text_referee_going_title_start"
        style="@style/ResultBigTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:paddingEnd="16dp"
        android:text="Red"
        android:textColor="@color/red_d0021b"
        app:layout_constraintBottom_toTopOf="@+id/text_result_referee_score_team_a"
        app:layout_constraintEnd_toStartOf="@+id/text_referee_going_title_end"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_referee_going_title_start"
        app:layout_constraintTop_toTopOf="@+id/text_referee_going_title_start" />

    <Button
        android:id="@+id/btn_result_referee_back_lobby"
        android:background="@drawable/btn_effect_custom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
...
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="2dp"
        android:text=":"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_result_referee_score_team_a"
        app:layout_constraintEnd_toStartOf="@+id/text_result_referee_score_team_b"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_result_referee_score_team_a"
        app:layout_constraintTop_toTopOf="@+id/text_result_referee_score_team_a" />

    <TextView
        android:id="@+id/text_result_referee_score_team_b"
...
